Name:                memento
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              David Hinkes
Maintainer:          david.hinkes@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Library
  build-depends: base,
                 bytestring,
                 cereal,
                 convertible,
                 curl,
                 pureMD5,
                 mtl,
                 utf8-string
  exposed-modules: Network.Rackspace.CloudAPI,
                   Network.Rackspace.CloudAPI.Mock,
                   Graphics.CR2
  hs-source-dirs: src

Executable memento
  hs-source-dirs: src
  main-is: Main.hs
  Build-depends:
    authenticate,
    base >= 4 && < 5,
    bytestring,
    containers,
    json,
    MissingH,
    pureMD5,
    snap-core,
    snap-server,
    text,
    transformers

  if flag(development)
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields
                   -fno-warn-orphans
Executable tests
  main-is: Tests.hs
  hs-source-dirs: src
  build-depends: base, HUnit
